5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1585_2049.log
== TEST (2019-03-26 10:48:35) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
dividendo = 289
divisor = 4
print(dividendo)
print(divisor)
quociente(dividendo // divisor)
print(quociente)
resto(dividendo % divisor)
print(resto)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    quociente(dividendo // divisor)
NameError: name 'quociente' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:48:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
dividendo = 289
divisor = 4
print(dividendo)
print(divisor)
quociente = (dividendo // divisor)
print(quociente)
resto = (dividendo % divisor)
print(resto)

-- OUTPUT:
289
4
72
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:48:58) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
dividendo = 289
divisor = 4
print(dividendo)
print(divisor)
quociente = (dividendo // divisor)
print(quociente)
resto = (dividendo % divisor)
print(resto)

-- EXECUTION TIME:
0.24484
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
289
4
72
1
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
289
4
72
1
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
289
4
72
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:50:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
dividendo = int(input("Qual o dividendo? "))
divisor = int(input("Qual o divisor? "))
print(dividendo)
print(divisor)
quociente = (dividendo // divisor)
print(quociente)
resto = (dividendo % divisor)
print(resto)

-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:50:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
dividendo = int(input("Qual o dividendo? "))
divisor = int(input("Qual o divisor? "))
print(dividendo)
print(divisor)
quociente = (dividendo // divisor)
print(quociente)
resto = (dividendo % divisor)
print(resto)

-- EXECUTION TIME:
0.170816
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
